adding components configuring project setup

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Game of life</title>
     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div id="game-of-life"></div>
-    <script src="build/root.js"></script>
+    <script type="module" src="/scripts/layout/root.js"></script>
 </body>
 </html>
